# doowm

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  gdb_commands.txt
scripts/: script.sh  xinitrc
src/: main.cpp
src/log/: logger.cpp  logger.h
src/x/: x.cpp  x.h
src/x/connection/: connection.cpp  connection.h
src/x/event/: event_handler.cpp  event_handler.h
src/x/keyboard/: keyboard.cpp  keyboard.h
src/x/launcher/: launcher.cpp  launcher.h
src/x/window/: window.cpp  window.h
